--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,21 @@
   <artifactId>sqlite-jdbc</artifactId>
   <version>3.49.0.0</version> <!-- statt 3.49.1.0 -->
 </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
