--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
   <groupId>org.xerial</groupId>
   <artifactId>sqlite-jdbc</artifactId>
-  <version>3.49.0.0</version> <!-- statt 3.49.1.0 -->
+  <version>3.49.0.0</version>
 </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
